--- a/views/operations_views.xml
+++ b/views/operations_views.xml
@@ -47,11 +47,11 @@
                             <field name="user_id" widget="selection"/>
                         </group>
                         <group string="Information ">
-                            <field name="issue_date" class="oe_inline"/>
+                            <field name="issue_date" />
                             <field name="o_order_cost" widget="monetary"/>
                             <field name="active" invisible="1"/>
                             <field name="company_id" groups="base.group_multi_company" widget="selection"
-                                   class="oe_inline"/>
+                                   />
                             <field name="currency_id" groups="base.group_multi_currency" widget="selection"/>
                             <field name="partner_id" widget="selection"/>
                             <field name="payment_term_id" widget="selection"/>
@@ -83,14 +83,14 @@
                                     <group>
                                         <group>
                                             <field name="sequence" widget="handle" invisible="1"/>
-                                            <field name="product_id" widget="selection" class="oe_inline"/>
-                                            <field name="name" widget="section_and_note_text" class="oe_inline"/>
-                                            <field name="product_uom" class="oe_inline"/>
-                                            <field name="qty" class="oe_inline"/>
+                                            <field name="product_id" widget="selection" />
+                                            <field name="name" widget="section_and_note_text" />
+                                            <field name="product_uom" />
+                                            <field name="qty" />
                                         </group>
                                         <group>
-                                            <field name="price_unit" widget="monetary" class="oe_inline"/>
-                                            <field name="price_subtotal" sum="Total Cost" class="oe_inline"/>
+                                            <field name="price_unit" widget="monetary" />
+                                            <field name="price_subtotal" sum="Total Cost" />
                                             <field name="categ_id" widget="selection" invisible="1"/>
                                             <field name="company_id" widget="selection" invisible="1"/>
                                             <field name="currency_id" widget="selection" invisible="1"/>
