--- a/views/product_category_views.xml
+++ b/views/product_category_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-
+        !-- Inherit Form View to Modify it -->
         <record id="product_category_form_inherit" model="ir.ui.view">
             <field name="name">product_category_form_view_inherit</field>
             <field name="model">product.category</field>
@@ -14,6 +14,22 @@
                 <field name="parent_id" position="after">
                     <field name="order_type" class="oe_inline"/>
                 </field>
+            </field>
+        </record>
+
+        <!-- Inherit Form View to Modify it -->
+        <record id="product_template_form_view_inherit" model="ir.ui.view">
+            <field name="name">product.template.product.form</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="arch" type="xml">
+
+                <xpath expr="//field[@name='detailed_type']" position="before">
+                    <field name="equipments_id"/>
+                    <field name="projects_id"/>
+                    <!-- Add your fields or attributes here -->
+                </xpath>
+
             </field>
         </record>
     </data>
