--- a/views/sales_views.xml
+++ b/views/sales_views.xml
@@ -76,14 +76,14 @@
                                     <group>
                                         <group>
                                             <field name="sequence" widget="handle" invisible="1"/>
-                                            <field name="product_id" widget="selection" class="oe_inline"/>
-                                            <field name="name" widget="section_and_note_text" class="oe_inline"/>
-                                            <field name="product_uom" class="oe_inline"/>
-                                            <field name="qty" class="oe_inline"/>
+                                            <field name="product_id" widget="selection" />
+                                            <field name="name" widget="section_and_note_text" />
+                                            <field name="product_uom" />
+                                            <field name="qty" />
                                         </group>
                                         <group>
-                                            <field name="price_unit" widget="monetary" class="oe_inline"/>
-                                            <field name="price_subtotal" sum="Total Cost" class="oe_inline"/>
+                                            <field name="price_unit" widget="monetary" />
+                                            <field name="price_subtotal" sum="Total Cost" />
                                             <field name="categ_id" widget="selection" invisible="1"/>
                                             <field name="company_id" widget="selection" invisible="1"/>
                                             <field name="currency_id" widget="selection" invisible="1"/>
@@ -214,5 +214,5 @@
               name="Sales Orders"
               parent="farm_menu_orders"
               action="farm_sales_action"
-              sequence="24"/>
+              sequence="25"/>
 </odoo>
