--- a/views/expenses_views.xml
+++ b/views/expenses_views.xml
@@ -54,7 +54,7 @@
                         </group>
                         <group string="Information ">
                             <field name="issue_date" />
-                            <field name="m_order_cost" widget="monetary" />
+                            <field name="e_order_cost" widget="monetary" />
                             <field name="active" invisible="1"/>
                             <field name="company_id" groups="base.group_multi_company" widget="selection" />
                             <field name="currency_id" groups="base.group_multi_currency" widget="selection" />
@@ -131,7 +131,7 @@
                 <field name="user_id" widget="selection"/>
                 <field name="activity_ids" widget="list_activity"/>
                 <field name="issue_date"/>
-                <field name="m_order_cost" sum="Total Order"/>
+                <field name="e_order_cost" sum="Total Order"/>
                 <field name="partner_id" widget="selection"/>
                 <field name="stock_warehouse" widget="selection"/>
             </tree>
@@ -172,7 +172,7 @@
                 <field name="name" type="row"/>
                 <field name="issue_date" type="col"/>
                 <field name="category_id" type="col"/>
-                <field name="m_order_cost" type="measure" widget="monetary"/>
+                <field name="e_order_cost" type="measure" widget="monetary"/>
 
                 <field name="state"/>
                 <field name="user_id"/>
@@ -188,7 +188,7 @@
         <field name="arch" type="xml">
             <graph string="expense Analysis" type="line" sample="1">
                 <field name="issue_date" interval="day"/>
-                <field name="m_order_cost" type="measure"/>
+                <field name="e_order_cost" type="measure"/>
             </graph>
         </field>
     </record>
