--- a/views/projects_views.xml
+++ b/views/projects_views.xml
@@ -362,7 +362,8 @@
                                 </group>
                                 <group>
                                     <div>
-                                        <button name="create_project_product" string="Create Product" type="object"
+                                        <button name="create_project_product" type="object"
+                                                string="Create Product"
                                                 class="oe_highlight"
                                                 attrs="{'invisible':[('product_id','!=', False)]}"/>
                                     </div>
@@ -374,8 +375,19 @@
                                 </group>
                             </group>
                             <group string="Analytic Account">
-                                <field name="analytic_account_id" widget="selection" class="oe_inline"/>
+                                <group>
+                                  <field name="analytic_account_id" widget="selection" class="oe_inline"/>
+                                </group>
+                                <group>
+                                    <div>
+                                        <button name="create_project_analytic_account" type="object"
+                                                string="Create Analytic Account"
+                                                class="oe_highlight"
+                                                attrs="{'invisible':[('product_id','!=', False)]}"/>
+                                    </div>
+                                </group>
                             </group>
+
                         </page>
                     </notebook>
                 </sheet>
