--- a/views/inherit_views.xml
+++ b/views/inherit_views.xml
@@ -31,5 +31,17 @@
 
             </field>
         </record>
+
+        <record id="view_account_analytic_account_form_inherit" model="ir.ui.view">
+            <field name="name">analytic.analytic.account.form</field>
+            <field name="model">account.analytic.account</field>
+            <field name="inherit_id" ref="analytic.view_account_analytic_account_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='code']" position="after">
+                    <field name="project_reference"/>
+                    <!-- Add your fields or attributes here -->
+                </xpath>
+            </field>
+        </record>
     </data>
 </odoo>
