--- a/views/projects_views.xml
+++ b/views/projects_views.xml
@@ -77,6 +77,7 @@
                             <field name="active" invisible="1"/>
                             <field name="company_id" widget="selection" groups="base.group_multi_company"/>
                             <field name="currency_id" widget="selection"/>
+                            <field name="analytic_account_id"/>
                         </group>
                         <group string="Time Frame">
                             <field name="start_date" type="date" class="oe_inline"/>
